--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": ".",
-  "name": "react-typescript-starter-pack",
+  "homepage": "to-do-app",
+  "name": "to-do-app",
   "version": "0.1.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -12,7 +12,7 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "@mate-academy/scripts": "^1.8.5",
+    "@mate-academy/scripts": "^2.1.2",
     "@mate-academy/students-ts-config": "*",
     "@mate-academy/stylelint-config": "*",
     "@types/node": "^20.14.10",
